--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 	<h1>Random Color Generator</h1>
 	<div class="container">
-		<div class="color-container">
+		<!-- <div class="color-container">
 			<span>#45dfff</span>
 			<button>Copy</button>
-		</div>
+		</div> -->
 	</div>
-	
+	<script src="app.js"></script>
 </body>
 </html>
